Start URL change

--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
   ],
   "theme_color": "#b7ffd1",
   "background_color": "#242626",
-  "start_url": ".",
+  "start_url": "/",
   "scope": "/",
   "display": "standalone",
   "lang": "en-US"
