--- a/manifest.json
+++ b/manifest.json
@@ -18,8 +18,8 @@
   ],
   "theme_color": "#b7ffd1",
   "background_color": "#242626",
-  "start_url": ".",
-  "scope": ".",
+  "start_url": "./",
+  "scope": "./",
   "display": "standalone",
   "lang": "en-US"
 }
