--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
   ],
   "theme_color": "#b7ffd1",
   "background_color": "#242626",
-  "start_url": "index.html",
+  "start_url": ".",
   "display": "standalone",
   "lang": "en-US"
 }
